Working implementation of the generalised profiler

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "run_solver"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
     "\"\"\"\n",
     "function run_solver(solver, ∇::Function, U0::Vector, p::Vector)::Vector\n",
     "    local problem = ODEProblem(∇, U0, (760.0, 790.0), p);   # Creating the ODEProblem instance\n",
-    "    local solution = solve(problem, reltol = 1e-6, solver); # Solving the ODE  \n",
+    "    local solution = solve(problem, reltol = 1e-6, solver()); # Solving the ODE  \n",
     "    local time = Array(solution.t);                         # Storing the time sampling \n",
     "    solution = Array(solution)[2, 1:end];   # Storing the solution for troposphere \n",
     "    solution = bin(time, solution);         # Getting the annual means\n",
@@ -116,60 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "profile_solvers"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Takes a list of solvers as an input and runs a multithreaded comparison that \n",
-    "stores the time information and the binned output of the ODE solver.\n",
-    "\"\"\"\n",
-    "function profile_solvers(solvers::Vector, ∇::Function, u0::Vector{Float64},\n",
-    "        p::Vector)::DataFrame\n",
-    "    local C14 = Matrix{Float64}(undef, length(solvers), 31);    # Creating the storage Matrix \n",
-    "    local t_mean = Vector{Float64}(undef, length(solvers));     # For the mean of the times\n",
-    "    local t_var = Vector{Float64}(undef, length(solvers));      # For the time varience \n",
-    "    local results = DataFrame(solver = @.string(solvers));      # DataFrame of summary Statistics\n",
-    "\n",
-    "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
-    "        local time_sample = Vector{Float64}(undef, 10); # A vector to hold the different run times of each trial \n",
-    "        for i in 1:10\n",
-    "            local timer = time();                       # Starting a timer\n",
-    "            solution = run_solver(solver(), ∇, u0, p);  # Running the solver\n",
-    "            time_sample[i] = time() - timer;            # ending the timer \n",
-    "\n",
-    "            if i == 10                          # Storing final run\n",
-    "                C14[index, 1:end] = solution;   # filling C14\n",
-    "            end\n",
-    "        end\n",
-    "        t_mean[index] = mean(time_sample[2:end]);   # Storing run time ignoring compile run.\n",
-    "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
-    "    end \n",
-    "\n",
-    "    C14 = (C14' .- median(C14, dims=1)')';   # Calculating deviations from median \n",
-    "    C14 = @.abs(C14);   # Absolute value \n",
-    "    results.accuracy = vec(mean(C14, dims=2));      # Calculating the mean of the deviation from the median \n",
-    "    results.accuracy_var = vec(var(C14, dims=2));   # Calculating the RMSE error << is better \n",
-    "    results.time_mean = t_mean;                     # Storing the mean run time\n",
-    "    results.time_var = t_var;                       # Storing the varience of the time sample \n",
-    "    return results\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +125,7 @@
        "select_gradient_solver"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,78 +134,17 @@
     "\"\"\"\n",
     "Calculates the gradient using a χ² loss function. \n",
     "\"\"\"\n",
-    "function select_gradient_solver(solver, ∇::Function, u0::Vector{Float64})\n",
-    "    function loss_function(parameters)  \n",
-    "        local solution = run_solver(solver(), ∇, u0, parameters); #! Naming\n",
+    "function select_gradient_solver(solver, ∇::Function, u0::Vector{Float64}, parameters)\n",
+    "    function loss_function(params)  \n",
+    "        local solution = run_solver(solver, ∇, u0, params); #! Naming\n",
     "        local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
     "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
     "        local ΔC14 .+= mean(miyake.d14c[1:4]);  # Calculates the ticktack offset\n",
     "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
     "        return -0.5 * χ²\n",
     "    end\n",
-    "    return loss_function\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "profile_forward_gradients (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function profile_forward_gradients(solvers, ∇::Function, u0::Vector{Float64}, params::Vector)\n",
-    "    local results = DataFrame(solvers = @.string(solvers));     # Net results\n",
-    "    local time_mean = Vector{Float64}(undef, length(solvers));  # Storage for speeds\n",
-    "    local time_var = Vector{Float64}(undef, length(solvers));   # Storing speed varience\n",
-    "    local gradient_matrix = Matrix{Float64}(undef, length(solvers), length(params)); # Storing gradients\n",
-    "    for (index, solver) in enumerate(solvers)\n",
-    "        local time_sample = Vector{Float64}(undef, 10);   # Storing the time sample\n",
-    "        for i in 1:10\n",
-    "            local timer = time();   # Creating a time\n",
-    "            local loss = select_gradient_solver(solver, ∇, u0); # Preparing the function\n",
-    "            local gradient = ForwardDiff.gradient(loss, params);    # Calculating the parameter gradient\n",
-    "            time_sample[i] = time() - timer;    # Appending the time to the time vector\n",
-    "            if i == 10  # Storing the gradient of the final run\n",
-    "                gradient_matrix[index, 1:end] = gradient;   # Appending the final gradient \n",
-    "            end\n",
-    "        end\n",
-    "        time_mean[index] = mean(time_sample[2:end]);   # Calculating and storing the mean\n",
-    "        time_var[index] = var(time_sample[2:end]);     # Calculating and storing the varience\n",
-    "    end\n",
-    "    gradient_matrix = (gradient_matrix' .- median(gradient_matrix, dims=1)')';   # Deviations \n",
-    "    gradient_matrix = @.abs(gradient_matrix); # Absolute deviations\n",
-    "\n",
-    "    results.time_means = time_mean; # Storing the time means \n",
-    "    results.time_vars = time_var;   # Storing the errors\n",
-    "    results.accuracy = vec(mean(gradient_matrix, dims=2));      # Accuracy as a mean of the deviations \n",
-    "    results.accuracy_var = vec(var(gradient_matrix, dims=2));   # Accuracy error\n",
-    "    \n",
-    "    return results\n",
-    "end\n",
-    "\n",
-    "# It would be dope to construct this framework only once and then be able to hand it only the two lines that are different. I think there must be a way to do this using macros"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Profiling the solvers by running each solver over the 30 year period surrounding the Miyake event. Saving the data to a file upon completion. \n",
-    "\n",
-    "I need to look into `BS5` as well as combinations like `AutoTsit5(Rosenbrook23)`. It may also be more efficient to have a function called write to CSV or something like that since I will be reusing the code in both places. I might just amalglomate the gradient and solver profiling into a single function although it would be much more elegant to have it as a macro or as a function programming element, where I passed a function kernel and retrieved the correct profiling function as the return output.\n",
-    "\n",
-    "To consolidate my plan. I am going to write a function that returns the correct function code as an output for the profiler allowing me to severely reduce the amount of code that I have. This will be good at the loss of readibility and generality. I don't need either of those things in large amounts so we are good. I will also move the plotting function into this notebook and make it a function so that. I can visualise my results here. Finally, I will make a write CSV file function that will have mutliple modes, for when I want to append additional solvers."
+    "    return ForwardDiff.gradient(loss_function, parameters)\n",
+    "end\n"
    ]
   },
   {
@@ -281,13 +167,15 @@
     "\"\"\"\n",
     "Writes the results to a CSV file. If mode is set to append then the results are added to an existing CSV file without checking. Else the file is created with `append=false`.\n",
     "\"\"\"\n",
-    "function write_csv(mode::String, data::DataFrame)\n",
+    "function write_csv(mode::String, data::DataFrame, filename::String)\n",
     "    if mode == \"append\";                           # Checking for the .csv file \n",
-    "        CSV.write(\"gradient_profiles.csv\", profiles, append=true);# Adding new solvers to the CSV\n",
+    "        CSV.write(filename, profiles, append=true);# Adding new solvers to the CSV\n",
     "    else \n",
-    "        CSV.write(\"gradient_profiles.csv\", profiles, append=false);# Creating the file if it does not exist \n",
+    "        CSV.write(filename, profiles, append=false);# Creating the file if it does not exist \n",
     "    end\n",
-    "end"
+    "end\n",
+    "\n",
+    "#! work is required here"
    ]
   },
   {
@@ -322,6 +210,48 @@
     "        Geom.yerrorbar, Geom.xerrorbar, Geom.point, Geom.label, # Geometries \n",
     "        Scale.x_log10, Scale.y_log10)  # Setting log scales \n",
     "    return datavisual\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "So this is highly experimental basically I am passing a function into the profile function, which takes only solver as an argument. This done using the wrapper method that I used earlier\n",
+    "\"\"\"\n",
+    "function profile(solvers::Vector, f::Function, ∇::Function, u0::Vector{Float64}, parameters::Vector, len::Integer)::DataFrame\n",
+    "    #! A major challenge is going to be getting the array to be the correct shape.\n",
+    "    local data = Matrix{Float64}(undef, length(solvers), len);    # Creating the storage Matrix \n",
+    "    local t_mean = Vector{Float64}(undef, length(solvers));     # For the mean of the times\n",
+    "    local t_var = Vector{Float64}(undef, length(solvers));      # For the time varience \n",
+    "    local results = DataFrame(solver = @.string(solvers));      # DataFrame of summary Statistics\n",
+    "\n",
+    "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
+    "        local time_sample = Vector{Float64}(undef, 10); # The different run times of each trial \n",
+    "        for i in 1:10\n",
+    "            local timer = time();               # Starting a timer\n",
+    "            solution = f(solver, ∇, u0, parameters);       # Running the solver\n",
+    "            time_sample[i] = time() - timer;    # ending the timer \n",
+    "\n",
+    "            if i == 10                          # Storing final run\n",
+    "                data[index, 1:end] = solution;   # filling C14\n",
+    "            end\n",
+    "        end\n",
+    "        t_mean[index] = mean(time_sample[2:end]);   # Storing run time ignoring compile run.\n",
+    "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
+    "    end \n",
+    "\n",
+    "    data = (data' .- median(data, dims=1)')';       # Calculating deviations from median \n",
+    "    data = @.abs(data);                             # Absolute deviations\n",
+    "    results.accuracy = vec(mean(data, dims=2));     # Mean deviation from the median \n",
+    "    results.accuracy_var = vec(var(data, dims=2));  # Calculating the RMSE error << is better \n",
+    "    results.time_mean = t_mean;                     # Storing the mean run time\n",
+    "    results.time_var = t_var;                       # Storing the varience of the time sample \n",
+    "    \n",
+    "    return results\n",
     "end"
    ]
   },
@@ -366,9 +296,11 @@
     "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
     "        ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
     "        TanYam7, Vern6];\n",
-    "    profiles = profile_forward_gradients(solvers, derivative, burnsolution, params); # Running the solvers \n",
-    "\n",
-    "    write_csv(\"\", profiles);    # Writing the data to a CSV\n",
+    "    \n",
+    "    forward_grads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6);  \n",
+    "    solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "    \n",
+    "    write_csv(\"\", solvers);    # Writing the data to a CSV\n",
     "    saplot = speed_vs_accuracy_plot(\"gradient_profiles.csv\"); # constructing the plot object\n",
     "    display(saplot)\n",
     "end\n",
@@ -380,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an attempt at the general profile function that I wish to use. I also need to improve the write csv function since at the moment it really sucs balls"
+    "This is an attempt at the general profile function that I wish to use. I also need to improve the write csv function since at the moment it really sucs balls. So I could try and make it that f was a function of only the solver. by using the same wrapping technique that I used earlier. Hmmmmmmm.... I might try this."
    ]
   },
   {
@@ -388,40 +320,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "So this is highly experimental basically I am passing a function into the profile function along with its args as an argument. f must take solvers as the first positional argument\n",
-    "\"\"\"\n",
-    "function profile(solvers::Vector, f::Function, args::Vector)::DataFrame\n",
-    "    local C14 = Matrix{Float64}(undef, length(solvers), 31);    # Creating the storage Matrix \n",
-    "    local t_mean = Vector{Float64}(undef, length(solvers));     # For the mean of the times\n",
-    "    local t_var = Vector{Float64}(undef, length(solvers));      # For the time varience \n",
-    "    local results = DataFrame(solver = @.string(solvers));      # DataFrame of summary Statistics\n",
-    "\n",
-    "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
-    "        local time_sample = Vector{Float64}(undef, 10); # A vector to hold the different run times of each trial \n",
-    "        for i in 1:10\n",
-    "            local timer = time();                       # Starting a timer\n",
-    "            solution = f(solver());  # Running the solver\n",
-    "            time_sample[i] = time() - timer;            # ending the timer \n",
-    "\n",
-    "            if i == 10                          # Storing final run\n",
-    "                C14[index, 1:end] = solution;   # filling C14\n",
-    "            end\n",
-    "        end\n",
-    "        t_mean[index] = mean(time_sample[2:end]);   # Storing run time ignoring compile run.\n",
-    "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
-    "    end \n",
-    "\n",
-    "    C14 = (C14' .- median(C14, dims=1)')';   # Calculating deviations from median \n",
-    "    C14 = @.abs(C14);   # Absolute value \n",
-    "    results.accuracy = vec(mean(C14, dims=2));      # Calculating the mean of the deviation from the median \n",
-    "    results.accuracy_var = vec(var(C14, dims=2));   # Calculating the RMSE error << is better \n",
-    "    results.time_mean = t_mean;                     # Storing the mean run time\n",
-    "    results.time_var = t_var;                       # Storing the varience of the time sample \n",
-    "    return results\n",
-    "end"
-   ]
+   "source": []
   }
  ],
  "metadata": {
