Working implementation of the main function and construction of csv

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -14,7 +14,8 @@
     "using DataFrames;               # For succinct data manipulation\n",
     "using CSV;                      # For writing the data to prevent constant re-running\n",
     "using ForwardDiff;              # For profiling the gradients \n",
-    "using Gadfly;                   #! For testing"
+    "using ReverseDiff;\n",
+    "using Gadfly, Plots;            # For plotting"
    ]
   },
   {
@@ -149,38 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "write_csv"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Writes the results to a CSV file. If mode is set to append then the results are added to an existing CSV file without checking. Else the file is created with `append=false`.\n",
+    "Here I am going to do the reverse diff. Maybe I could incorporate this as a feature of the profile dif function that I already have?\n",
     "\"\"\"\n",
-    "function write_csv(mode::String, data::DataFrame, filename::String)\n",
-    "    if mode == \"append\";                           # Checking for the .csv file \n",
-    "        CSV.write(filename, profiles, append=true);# Adding new solvers to the CSV\n",
-    "    else \n",
-    "        CSV.write(filename, profiles, append=false);# Creating the file if it does not exist \n",
+    "function r_gradient_solver(solver, ∇::Function, u0::Vector{Float64}, parameters)\n",
+    "    function loss_function(params)  \n",
+    "        local solution = run_solver(solver, ∇, u0, params); #! Naming\n",
+    "        local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
+    "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
+    "        local ΔC14 .+= mean(miyake.d14c[1:4]);  # Calculates the ticktack offset\n",
+    "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
+    "        return -0.5 * χ²\n",
     "    end\n",
-    "end\n",
-    "\n",
-    "#! work is required here"
+    "    return ReverseDiff.gradient(loss_function, parameters)\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +181,7 @@
        "speed_vs_accuracy_plot"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,12 +193,12 @@
     "function speed_vs_accuracy_plot(filename::String)\n",
     "    local r = DataFrame(CSV.File(filename));    # Reading data into the workspace\n",
     "    local datavisual = Gadfly.plot(# Plot object for manipultation \n",
-    "        y=r.accuracy, x=r.time_means, label=r.solvers,    # Raw data \n",
+    "        y=r.accuracy, x=r.time_mean, label=r.solver,    # Raw data \n",
     "        Guide.ylabel(\"Accuracy\"), Guide.xlabel(\"Time\"), # X, Y Labels  \n",
     "        ymin=r.accuracy - r.accuracy_var,   # Y lower error bar\n",
     "        ymax=r.accuracy + r.accuracy_var,   # Y upper error bar\n",
-    "        xmin=r.time_means - r.time_vars,  # X lower error bar\n",
-    "        xmax=r.time_means + r.time_vars,  # X upper error bar\n",
+    "        xmin=r.time_mean - r.time_var,  # X lower error bar\n",
+    "        xmax=r.time_mean + r.time_var,  # X upper error bar\n",
     "        Geom.yerrorbar, Geom.xerrorbar, Geom.point, Geom.label, # Geometries \n",
     "        Scale.x_log10, Scale.y_log10)  # Setting log scales \n",
     "    return datavisual\n",
@@ -257,9 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Plot(...)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
@@ -282,45 +283,31 @@
     "    params[5] = 120.05769867244142;     # The height of the super gaussian \n",
     "    params[6] = 12.0;                   # Width of the super-gaussian \n",
     "\n",
-    "    # The parameters to the model must be incorrect\n",
     "    production(t, params) = params[1] * (1 + params[2] * \n",
     "        sin(2 * π / params[3] * t + params[4])) +           # Sinusoidal production \n",
     "        params[5] * exp(- (params[6] * (t - 775)) ^ 16);    # Super Gaussian event\n",
-    "    derivative(x, params, t) = vec(TO * x + production(t, params) * P);  # The derivative of the system \n",
+    "    derivative(x, params, t) = vec(TO * x + production(t, params) * P);  # The derivative system \n",
     "\n",
     "    u0 = TO \\ (- params[1] * P);  # Equilibriating the system\n",
     "\n",
     "    burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params);  # Burn in problem  \n",
     "    burnsolution = solve(burnproblem, reltol=1e-6).u[end];              # Running model \n",
     "\n",
-    "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23,\n",
-    "        ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,\n",
-    "        TanYam7, Vern6];\n",
-    "    \n",
-    "    forward_grads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6);  \n",
+    "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,      TanYam7, Vern6];\n",
+    "        \n",
+    "    fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6);  \n",
     "    solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
     "    \n",
-    "    write_csv(\"\", solvers);    # Writing the data to a CSV\n",
-    "    saplot = speed_vs_accuracy_plot(\"gradient_profiles.csv\"); # constructing the plot object\n",
-    "    display(saplot)\n",
+    "    CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
+    "    CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
+    "    grad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");# constructing the plot object\n",
+    "    solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");# Plot object\n",
+    "    savefig(grad_plot, \"forwards_mode_gradient.pdf\");\n",
+    "    savefig(solver_plot, \"solver.pdf\");\n",
     "end\n",
     "\n",
     "main()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is an attempt at the general profile function that I wish to use. I also need to improve the write csv function since at the moment it really sucs balls. So I could try and make it that f was a function of only the solver. by using the same wrapping technique that I used earlier. Hmmmmmmm.... I might try this."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
