--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 143,
    "id": "5eb7110f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: using Plots.plot in module Main conflicts with an existing identifier.\n"
+     ]
+    }
+   ],
    "source": [
     "using HDF5;                     # for .hd5 file manipulation\n",
     "using DifferentialEquations;    # Provides a variety of differential solvers\n",
@@ -14,7 +22,7 @@
     "using DataFrames;               # For succinct data manipulation\n",
     "using CSV;                      # For writing the data to prevent constant re-running\n",
     "using ForwardDiff;              # For profiling the gradients \n",
-    "using ReverseDiff;\n",
+    "# using ReverseDiff;\n",
     "using Gadfly, Plots;            # For plotting"
    ]
   },
@@ -249,26 +257,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Plot(...)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Plot(...)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "LoadError",
+     "evalue": "UndefVarError: savefig not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: savefig not defined",
+      "",
+      "Stacktrace:",
+      " [1] main()",
+      "   @ Main ./In[141]:31",
+      " [2] top-level scope",
+      "   @ In[141]:35",
+      " [3] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
+     ]
     }
    ],
    "source": [
@@ -295,15 +303,17 @@
     "\n",
     "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,      TanYam7, Vern6];\n",
     "        \n",
-    "    fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6);  \n",
-    "    solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "    # fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
+    "    rgrads = profile(solvers, r_gradient_solver, derivative, burnsolution, params, 6); \n",
+    "    # solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
     "    \n",
-    "    CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
-    "    CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
-    "    grad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");# constructing the plot object\n",
-    "    solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");# Plot object\n",
-    "    savefig(grad_plot, \"forwards_mode_gradient.pdf\");\n",
-    "    savefig(solver_plot, \"solver.pdf\");\n",
+    "    CSV,write(\"r_gradient_profiles.csv\", rgrads);\n",
+    "    # CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
+    "    # CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
+    "    # grad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");# constructing the plot object\n",
+    "    # solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");# Plot object\n",
+    "    # savefig(grad_plot, \"forwards_mode_gradient.pdf\");\n",
+    "    # savefig(solver_plot, \"solver.pdf\");\n",
     "end\n",
     "\n",
     "main()"
