Successful main run

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 149,
    "id": "5eb7110f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: using Plots.plot in module Main conflicts with an existing identifier.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using HDF5;                     # for .hd5 file manipulation\n",
     "using DifferentialEquations;    # Provides a variety of differential solvers\n",
@@ -21,9 +13,8 @@
     "using Statistics;               # Let's get this fucking bread \n",
     "using DataFrames;               # For succinct data manipulation\n",
     "using CSV;                      # For writing the data to prevent constant re-running\n",
-    "using ForwardDiff;              # For profiling the gradients \n",
-    "# using ReverseDiff;\n",
-    "using Gadfly, Plots;            # For plotting"
+    "using ForwardDiff, ReverseDiff; # For profiling the gradients \n",
+    "using Gadfly, Fontconfig, Cairo;# For plotting"
    ]
   },
   {
@@ -95,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +95,7 @@
        "run_solver"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +104,7 @@
     "\"\"\"\n",
     "Passed a solver function runs the solver and returns the speed and binned data\n",
     "\"\"\"\n",
-    "function run_solver(solver, ∇::Function, U0::Vector, p::Vector)::Vector\n",
+    "function run_solver(solver, ∇::Function, U0::Vector, p)::Vector\n",
     "    local problem = ODEProblem(∇, U0, (760.0, 790.0), p);   # Creating the ODEProblem instance\n",
     "    local solution = solve(problem, reltol = 1e-6, solver()); # Solving the ODE  \n",
     "    local time = Array(solution.t);                         # Storing the time sampling \n",
@@ -158,9 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "r_gradient_solver"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Here I am going to do the reverse diff. Maybe I could incorporate this as a feature of the profile dif function that I already have?\n",
@@ -257,28 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: savefig not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: savefig not defined",
-      "",
-      "Stacktrace:",
-      " [1] main()",
-      "   @ Main ./In[141]:31",
-      " [2] top-level scope",
-      "   @ In[141]:35",
-      " [3] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1116"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "function main()\n",
     "    TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
@@ -303,20 +286,31 @@
     "\n",
     "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,      TanYam7, Vern6];\n",
     "        \n",
-    "    # fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "    rgrads = profile(solvers, r_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "    # solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "    fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
+    "    # rgrads = profile(solvers, r_gradient_solver, derivative, burnsolution, params, 6); \n",
+    "    solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
     "    \n",
-    "    CSV,write(\"r_gradient_profiles.csv\", rgrads);\n",
-    "    # CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
-    "    # CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
-    "    # grad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");# constructing the plot object\n",
-    "    # solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");# Plot object\n",
-    "    # savefig(grad_plot, \"forwards_mode_gradient.pdf\");\n",
-    "    # savefig(solver_plot, \"solver.pdf\");\n",
+    "    # CSV.write(\"rgrad_profiles.csv\", rgrads);    # writing the data to a csv\n",
+    "    CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
+    "    CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
     "end\n",
     "\n",
     "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rgrad_plot = speed_vs_accuracy_plot(\"rgrad_profiles.csv\");      # Plot objects\n",
+    "fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
+    "solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");    # Plot object\n",
+    "\n",
+    "# draw(PDF(\"reverse_mode_gradient.pdf\", 10cm, 10cm), rgrad_plot);\n",
+    "draw(PDF(\"forwards_mode_gradient.pdf\", 10cm, 10cm), fgrad_plot);\n",
+    "draw(PDF(\"solver.pdf\", 10cm, 10cm), solver_plot);"
    ]
   }
  ],
