--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -205,11 +205,11 @@
     "    local datavisual = Gadfly.plot(# Plot object for manipultation \n",
     "        y=r.accuracy, x=r.time_mean, label=r.solver,    # Raw data \n",
     "        Guide.ylabel(\"Accuracy\"), Guide.xlabel(\"Time\"), # X, Y Labels  \n",
-    "        ymin=r.accuracy - r.accuracy_var,   # Y lower error bar\n",
-    "        ymax=r.accuracy + r.accuracy_var,   # Y upper error bar\n",
+    "        # ymin=r.accuracy - r.accuracy_var,   # Y lower error bar\n",
+    "        # ymax=r.accuracy + r.accuracy_var,   # Y upper error bar\n",
     "        xmin=r.time_mean - r.time_var,  # X lower error bar\n",
     "        xmax=r.time_mean + r.time_var,  # X upper error bar\n",
-    "        Geom.yerrorbar, Geom.xerrorbar, Geom.point, Geom.label, # Geometries \n",
+    "        Geom.xerrorbar, Geom.point, Geom.label, # Geometries \n",
     "        Scale.x_log10, Scale.y_log10)  # Setting log scales \n",
     "    return datavisual\n",
     "end"
@@ -261,7 +261,18 @@
    "cell_type": "code",
    "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"solver_profiles.csv\""
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function main()\n",
     "    TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
@@ -300,9 +311,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "DomainError with -23.182918673775426:\nNaN result for non-NaN input.",
+     "output_type": "error",
+     "traceback": [
+      "DomainError with -23.182918673775426:\nNaN result for non-NaN input.",
+      "",
+      "Stacktrace:",
+      "  [1] nan_dom_err",
+      "    @ ./math.jl:429 [inlined]",
+      "  [2] log10(x::Float64)",
+      "    @ Base.Math ./math.jl:575",
+      "  [3] apply_scale(::Gadfly.Scale.ContinuousScale, ::Vector{Gadfly.Aesthetics}, ::Gadfly.Data, ::Vararg{Gadfly.Data, N} where N)",
+      "    @ Gadfly.Scale ~/.julia/packages/Gadfly/B5yQc/src/scale.jl:217",
+      "  [4] apply_scales(::IterTools.Distinct{Base.ValueIterator{Dict{Symbol, Gadfly.ScaleElement}}, Gadfly.ScaleElement}, ::Vector{Gadfly.Aesthetics}, ::Gadfly.Data, ::Vararg{Gadfly.Data, N} where N)",
+      "    @ Gadfly.Scale ~/.julia/packages/Gadfly/B5yQc/src/scale.jl:24",
+      "  [5] apply_scales(::IterTools.Distinct{Base.ValueIterator{Dict{Symbol, Gadfly.ScaleElement}}, Gadfly.ScaleElement}, ::Gadfly.Data, ::Gadfly.Data, ::Vararg{Gadfly.Data, N} where N)",
+      "    @ Gadfly.Scale ~/.julia/packages/Gadfly/B5yQc/src/scale.jl:34",
+      "  [6] render_prepare(plot::Plot)",
+      "    @ Gadfly ~/.julia/packages/Gadfly/B5yQc/src/Gadfly.jl:641",
+      "  [7] render(plot::Plot)",
+      "    @ Gadfly ~/.julia/packages/Gadfly/B5yQc/src/Gadfly.jl:736",
+      "  [8] draw(backend::Compose.Image{Compose.PDFBackend}, p::Plot)",
+      "    @ Gadfly ~/.julia/packages/Gadfly/B5yQc/src/Gadfly.jl:843",
+      "  [9] top-level scope",
+      "    @ In[156]:6",
+      " [10] eval",
+      "    @ ./boot.jl:360 [inlined]",
+      " [11] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "    @ Base ./loading.jl:1116"
+     ]
+    }
+   ],
    "source": [
     "# rgrad_plot = speed_vs_accuracy_plot(\"rgrad_profiles.csv\");      # Plot objects\n",
     "fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
